# lit-learn

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: Makefile  make.bat
docs/source/: api.rst  conf.py  getting-started.md  index.md  index.rst
examples/imagenet/: README.md  main.py  test.py  train.py
lit_learn/: __init__.py
lit_learn/core/: __init__.py  objective.py  objectives.py
lit_learn/lit_modules/: __init__.py  erm.py
lit_learn/objectives/: __init__.py  accuracy.py  losses.py  multi_objective.py
lit_learn/objectives/adapters/: __init__.py  losses.py
lit_learn/objectives/classification/: __init__.py  accuracy.py  cross_entropy.py  entropy.py
lit_learn/strategies/: __init__.py
lit_learn/strategies/scalarization/: __init__.py  linear.py
tests/test_objectives/: test_accuracy.py  test_core_objective.py  test_losses.py  test_multi_objective.py
